fixed silent mode

--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::North</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tabMain">
       <attribute name="title">
@@ -282,6 +282,16 @@
          </property>
          <property name="text">
           <string>M&amp;inimize on close</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="silentMode">
+         <property name="toolTip">
+          <string>Suppress notifications and tray animations</string>
+         </property>
+         <property name="text">
+          <string>Silent mode</string>
          </property>
         </widget>
        </item>
