--- a/src/qt/forms/i2poptionswidget.ui
+++ b/src/qt/forms/i2poptionswidget.ui
@@ -138,7 +138,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Anoncoin-client</string>
+        <string>Gostcoin-client</string>
        </property>
       </widget>
      </item>
