--- a/src/qt/forms/rpcconsole.ui
+++ b/src/qt/forms/rpcconsole.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Anoncoin - Debug window</string>
+   <string>Gostcoin - Debug window</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -36,7 +36,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Anoncoin Core</string>
+          <string>Gostcoin Core</string>
          </property>
         </widget>
        </item>
@@ -322,7 +322,7 @@
        <item row="15" column="0">
         <widget class="QPushButton" name="openDebugLogfileButton">
          <property name="toolTip">
-          <string>Open the Anoncoin debug log file from the current data directory. This can take a few seconds for large log files.</string>
+          <string>Open the Gostcoin debug log file from the current data directory. This can take a few seconds for large log files.</string>
          </property>
          <property name="text">
           <string>&amp;Open</string>
@@ -348,7 +348,7 @@
        <item row="17" column="0">
         <widget class="QPushButton" name="showCLOptionsButton">
          <property name="toolTip">
-          <string>Show the Anoncoin-Qt help message to get a list with possible Anoncoin command-line options.</string>
+          <string>Show the Gostcoin-Qt help message to get a list with possible Gostcoin command-line options.</string>
          </property>
          <property name="text">
           <string>&amp;Show</string>
