--- a/src/qt/gostcoin.qrc
+++ b/src/qt/gostcoin.qrc
@@ -44,7 +44,7 @@
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash.png</file>
-        <file alias="i2pguy">res/images/i2pguy.png</file>
+        <file alias="mask">res/images/mask.png</file>
         <file alias="splash_testnet">res/images/splash_testnet.png</file>
     </qresource>
     <qresource prefix="/movies">
