--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -23,7 +23,7 @@
       </sizepolicy>
      </property>
      <property name="pixmap">
-      <pixmap resource="../bitcoin.qrc">:/images/i2pguy</pixmap>
+      <pixmap resource="../gostcoin.qrc">:/images/mask</pixmap>
      </property>
     </widget>
    </item>
@@ -150,7 +150,7 @@ This product includes software developed by the OpenSSL Project for use in the O
   </layout>
  </widget>
  <resources>
-  <include location="../bitcoin.qrc"/>
+  <include location="../gostcoin.qrc"/>
  </resources>
  <connections>
   <connection>
