--- a/src/qt/gostcoin.qrc
+++ b/src/qt/gostcoin.qrc
@@ -22,7 +22,7 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
+        <file alias="gostcoin_testnet">res/icons/gostcoin_testnet.png</file>
         <file alias="toolbar_testnet">res/icons/toolbar_testnet.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
@@ -42,7 +42,6 @@
         <file alias="debugwindow">res/icons/debugwindow.png</file>
     </qresource>
     <qresource prefix="/images">
-        <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash.png</file>
         <file alias="mask">res/images/mask.png</file>
         <file alias="splash_testnet">res/images/splash_testnet.png</file>
