--- a/src/qt/forms/signverifymessagedialog.ui
+++ b/src/qt/forms/signverifymessagedialog.ui
@@ -68,7 +68,7 @@
              <normaloff>:/icons/address-book</normaloff>:/icons/address-book</iconset>
            </property>
            <property name="shortcut">
-            <string>Alt+A</string>
+            <string notr="true">Alt+A</string>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
@@ -88,7 +88,7 @@
              <normaloff>:/icons/editpaste</normaloff>:/icons/editpaste</iconset>
            </property>
            <property name="shortcut">
-            <string>Alt+P</string>
+            <string notr="true">Alt+P</string>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
@@ -281,7 +281,7 @@
              <normaloff>:/icons/address-book</normaloff>:/icons/address-book</iconset>
            </property>
            <property name="shortcut">
-            <string>Alt+A</string>
+            <string notr="true">Alt+A</string>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
