--- a/src/qt/gostcoin.qrc
+++ b/src/qt/gostcoin.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/icons">
-        <file alias="bitcoin">res/icons/gostcoin.png</file>
+        <file alias="gostcoin">res/icons/gostcoin.png</file>
+        <file alias="qtlogo">res/icons/qtlogo.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
