paper cash icons

--- a/src/qt/paperwallet.qrc
+++ b/src/qt/paperwallet.qrc
@@ -2,4 +2,8 @@
 	<qresource prefix="/html">
         <file alias="paperwallet">res/html/paperwallet.html</file>
     </qresource>
+    <qresource prefix="/icons">
+        <file alias="cash">res/icons/cash.png</file>
+        <file alias="cash_print">res/icons/cash_print.png</file>    
+    </qresource>    
 </RCC>
