--- a/src/qt/gostcoin.qrc
+++ b/src/qt/gostcoin.qrc
@@ -44,8 +44,8 @@
     </qresource>
     <qresource prefix="/images">
         <file alias="splash">res/images/splash.png</file>
-        <file alias="mask">res/images/mask.png</file>
         <file alias="splash_testnet">res/images/splash_testnet.png</file>
+        <file alias="splash-small">res/images/splash-small.png</file>
     </qresource>
     <qresource prefix="/movies">
         <file alias="update_spinner">res/movies/update_spinner.mng</file>
